--- a/index.html
+++ b/index.html
@@ -1,33 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    *{
+      font-family: 'Outfit', sans-serif;
+    }
   </style>
+  <script>
+    tailwind.config =
+    {
+      theme:
+      {
+        extend:
+        {
+          colors:
+          {
+            clifford: '#da373d',
+            main: ' hsl(217, 54%, 11%)',
+            card: 'hsl(216, 50%, 16%)',
+            view: 'hsla(178, 100%, 50%, 52%)'
+          },
+        },
+        fontFamily: {
+            'outfit' : ['Outfit', '<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">']
+        }
+      }
+    }
+  </script>
 </head>
-<body>
 
-  Equilibrium #3429
+<body class="bg-main h-screen flex justify-center items-center">
+  <div class="w-80  p-5 bg-red-500 bg-card rounded-2xl">
+    <div class="relative group img-box">
+      <img src="images/image-equilibrium.jpg" class="rounded-xl w-full" alt="">
+      <div class="absolute bg-view flex opacity-0 group-hover:opacity-100 cursor-pointer items-center justify-center transition ease-in-150 duration-200 w-full h-full top-0"><img class="z-index-50" src="images/icon-view.svg" alt=""></div>
+    </div>
+    <h1 class="text-white hover:cyan-300 text-xl font-outfit mt-4">Equilibrium #3429</h1>
+    <p class="text-gray-500">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="flex justify-between mt-8">
+      <span class="flex items-center text-cyan-300"><img class="mr-2" src="./images/icon-ethereum.svg" alt="">0.041ETH</span>
+      <span class="flex items-center text-gray-500"><img src="images/icon-clock.svg" class="mr-2" alt="">3 days left</span>
+    </div>
+    <hr class="text-gray-300 my-4">
+    <div class="flex items-center">
+      <img src="images/image-avatar.png" class="rounded-full border border-white w-10 mr-4" alt="">
+      <span class="text-gray-500 text-sm">Creation of <a href="#" class="text-white font-bold  hover:text-cyan-300"> Jules Wyvern</a></span>
+    </div>
+  </div>
+  <!-- Equilibrium #3429
 
-  Our Equilibrium collection promotes balance and calm.
+  
 
   0.041 ETH
   3 days left
   
-  Creation of Jules Wyvern
+  Creation of Jules Wyvern -->
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
