--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body class="bg-main h-screen flex justify-center items-center">
-  <div class="w-80  p-5 bg-red-500 bg-card rounded-2xl">
+  <div class="sm:w-80 w-9/12  p-5 bg-red-500 bg-card rounded-2xl">
     <div class="relative group img-box">
       <img src="images/image-equilibrium.jpg" class="rounded-xl w-full" alt="">
       <div class="absolute bg-view flex opacity-0 group-hover:opacity-100 cursor-pointer items-center justify-center transition ease-in-150 duration-200 w-full h-full top-0"><img class="z-index-50" src="images/icon-view.svg" alt=""></div>
